update all card links to buttons

--- a/gamedesign.html
+++ b/gamedesign.html
@@ -106,7 +106,7 @@
                         <p>Critiquing the world's most popular puzzle experience!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1d7_gtC8nNZKRs8eqlJUFv3C0IdyA5S73/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1d7_gtC8nNZKRs8eqlJUFv3C0IdyA5S73/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
                             target="_blank">Download</a>
                     </div>
@@ -122,7 +122,7 @@
                         <p>Critiquing this 1996 classic!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://link.medium.com/m3kIWsmQ0qb"
+                        <a class="waves-effect waves-light btn" href="https://link.medium.com/m3kIWsmQ0qb"
                             target="_blank">Read on Medium</a>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <p>Critiquing Naughty Dog's finest!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://link.medium.com/mOLlXTkQ0qb"
+                        <a class="waves-effect waves-light btn" href="https://link.medium.com/mOLlXTkQ0qb"
                             target="_blank">Read on Medium</a>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://link.medium.com/eopZGxbsppb" target="_blank">Read on Medium</a>
+                        <a class="waves-effect waves-light btn" href="https://link.medium.com/eopZGxbsppb" target="_blank">Read on Medium</a>
                     </div>
                 </div>
             </div>
@@ -169,11 +169,11 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1Ji6DKXJkelWEnf903YtMp3jpVPztxcbu/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1Ji6DKXJkelWEnf903YtMp3jpVPztxcbu/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
                             target="_blank">Download
                             Presentation</a>
-                        <a href="https://drive.google.com/file/d/19PFEwsIob7_YlmpJV5jh3RryWJNf-4S4/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/19PFEwsIob7_YlmpJV5jh3RryWJNf-4S4/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
                             target="_blank">Download
                             Design Doc</a>
