--- a/gamedev.html
+++ b/gamedev.html
@@ -106,7 +106,7 @@
                         <p>Preparing a QA sheet for the popular arcade game, Tempest!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1Fz--PJUun96ao1raksRV8y54uccBKkmU/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1Fz--PJUun96ao1raksRV8y54uccBKkmU/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
                             target="_blank">Download</a>
                     </div>
@@ -122,7 +122,7 @@
                         <p>Presentation for a game we pitched in class!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1_izqe0to5qIgeZKqf5cgVAx_2nf-fo9q/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1_izqe0to5qIgeZKqf5cgVAx_2nf-fo9q/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
                             target="_blank">Download</a>
                     </div>
@@ -138,7 +138,7 @@
                         <p>An HCD for a game I designed called Esc, set in ancient Egypt.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1x0zzl-mEu5S_AA5wNsAb1XpfYJ2il-Ga/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1x0zzl-mEu5S_AA5wNsAb1XpfYJ2il-Ga/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
                             target="_blank">Download</a>
                     </div>
@@ -156,7 +156,7 @@
                         <p>Creating a feature-system matrix and a risk assessment grid for Donkey Kong.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1VogRhjb82St7Nmo7_3cUa4xxMNU2-207/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1VogRhjb82St7Nmo7_3cUa4xxMNU2-207/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
                             target="_blank">Download</a>
                     </div>
@@ -172,7 +172,7 @@
                         <p>Analysing the release and market performance of Call of Duty Modern Warfare.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/16uM6RvcOgK2kdurQnGfnDdJWntcoKMPr/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/16uM6RvcOgK2kdurQnGfnDdJWntcoKMPr/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
                             target="_blank">Download</a>
                     </div>
@@ -188,7 +188,7 @@
                         <p>A discussion about Blue Sky Open Idea Formation and Brainstorming.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1TjyPSdlgYCU3ABY_FykDFwNghle1C8_J/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1TjyPSdlgYCU3ABY_FykDFwNghle1C8_J/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
                             target="_blank">Download</a>
                     </div>
