--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -107,9 +107,9 @@
                         <p>A game about kindness, showcased at the iThrive Game Jam 2018!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/15HnzvtzDh0nmwHvrEVI7i89pFQsa_7Z3/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/15HnzvtzDh0nmwHvrEVI7i89pFQsa_7Z3/view?usp=sharing"
                             download="Life_Game.zip" target="_blank">Download</a>
-                        <a onclick="showhide_video('lifevideodiv', 'lifevideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('lifevideodiv', 'lifevideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="lifevideodiv" style="display: none;">
                         <iframe id="lifevideoid"
@@ -129,9 +129,9 @@
                             the magma!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1w1oQPJ2ZfPmUYSihvezm_xefPVDjf0v3/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1w1oQPJ2ZfPmUYSihvezm_xefPVDjf0v3/view?usp=sharing"
                             download="EndlessRunner_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('video1', 'video1id');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('video1', 'video1id');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="video1" style="display: none;">
                         <iframe id="video1id"
@@ -151,9 +151,9 @@
                             Engine 4!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1bllwVxAgukX1p_TUP-jW584haXNQL1e-/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1bllwVxAgukX1p_TUP-jW584haXNQL1e-/view?usp=sharing"
                             download="RaceAgainstTime_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('racevideodiv', 'racevideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('racevideodiv', 'racevideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="racevideodiv" style="display: none;">
                         <iframe id="racevideoid"
@@ -175,9 +175,9 @@
                             endless swarms of enemies! Made using Unreal Engine 4!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1EJ5dYUvFUHj403TEsaNv-lpc-oQEYwF5/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1EJ5dYUvFUHj403TEsaNv-lpc-oQEYwF5/view?usp=sharing"
                             download="TwinStickShooter_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('twinvideodiv', 'twinvideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('twinvideodiv', 'twinvideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="twinvideodiv" style="display: none;">
                         <iframe id="twinvideoid"
@@ -199,9 +199,9 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1quoUeMNrYBXyK0pFYu8IK6zaoouOXiQP/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1quoUeMNrYBXyK0pFYu8IK6zaoouOXiQP/view?usp=sharing"
                             download="DODGECUBE_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('cubevideodiv', 'cubevideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('cubevideodiv', 'cubevideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="cubevideodiv" style="display: none;">
                         <iframe id="cubevideoid"
@@ -220,17 +220,17 @@
                         <p>Designing a Holiday-themed level and a new mechanic for the Match-3 game Cascade!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1vdpzgX9N_ymHitZp2A8fFryv43yn22lB/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1vdpzgX9N_ymHitZp2A8fFryv43yn22lB/view?usp=sharing"
                             download="Varun Sunil Bajaj - Cascade Design 1.docx" target="_blank">Design 1 Doc</a>
-                        <a href="images/gameplay_prototyping/Cascade Design Challenge 1 - Varun Sunil Bajaj.jpg"
+                        <a class="waves-effect waves-light btn" href="images/gameplay_prototyping/Cascade Design Challenge 1 - Varun Sunil Bajaj.jpg"
                             download="Varun Sunil Bajaj - Cascade Design 1.jpg" target="_blank">Design 1 Image</a><br>
-                        <a href="https://drive.google.com/file/d/1x9Erqx_pfigpBmayeE48bxkfrgJoOmCE/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1x9Erqx_pfigpBmayeE48bxkfrgJoOmCE/view?usp=sharing"
                             download="Varun Sunil Bajaj - Cascade Design 2.docx" target="_blank">Design 2 Doc</a>
-                        <a href="images/gameplay_prototyping/Cascade Design Challenge 2 - Image 1 - Varun Sunil Bajaj.png"
+                        <a class="waves-effect waves-light btn" href="images/gameplay_prototyping/Cascade Design Challenge 2 - Image 1 - Varun Sunil Bajaj.png"
                             download="Varun Sunil Bajaj - Cascade Design 2 - Image 1.jpg" target="_blank">Design 2 -
                             Image
                             1</a>
-                        <a href="images/gameplay_prototyping/Cascade Design Challenge 2 - Image 2 - Varun Sunil Bajaj.png"
+                        <a class="waves-effect waves-light btn" href="images/gameplay_prototyping/Cascade Design Challenge 2 - Image 2 - Varun Sunil Bajaj.png"
                             download="Varun Sunil Bajaj - Cascade Design 2 - Image 2.jpg" target="_blank">Design 2 -
                             Image
                             2</a>
@@ -250,7 +250,7 @@
                         <p>Making a Match-3 game from scratch in Unity!</p>
                     </div>
                     <div class="card-action">
-                        <a onclick="showhide_video('match3videodiv', 'match3videoid')">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('match3videodiv', 'match3videoid')">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="match3videodiv" style="display: none;">
                         <iframe id="match3videoid"
@@ -269,7 +269,7 @@
                         <p>Designing a Card and Dice based game!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1Ik5WBuen2HLoSDq2tcuJRkb_4hrtMES0/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1Ik5WBuen2HLoSDq2tcuJRkb_4hrtMES0/view?usp=sharing"
                             download="Varun Sunil Bajaj - Card and Dice Game Rule Sheet.pdf" target="_blank">Rule
                             Sheet</a>
                     </div>
@@ -286,9 +286,9 @@
                         <p>A weekend-long prototyping project!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/14o1O12vx2qf_GnO8uC841pOJ4V3pw8K2/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/14o1O12vx2qf_GnO8uC841pOJ4V3pw8K2/view?usp=sharing"
                             download="CubeSimulator_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('cube2videodiv', 'cube2videoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('cube2videodiv', 'cube2videoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="cube2videodiv" style="display: none;">
                         <iframe id="cube2videoid"
@@ -309,9 +309,9 @@
                         <p>A tower-defense RTS game!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1tnfgDgCn0n2NSYW5ovuoeuJMV28pxIq3/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1tnfgDgCn0n2NSYW5ovuoeuJMV28pxIq3/view?usp=sharing"
                             download="RTS_Game_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('rtsvideodiv', 'rtsvideoid');">Watch Trailer</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('rtsvideodiv', 'rtsvideoid');">Watch Trailer</a>
                     </div>
                     <div class="video-container" id="rtsvideodiv" style="display: none;">
                         <iframe id="rtsvideoid"
@@ -330,7 +330,7 @@
                         <p>Designing a game around an object on the spot!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/17bYxcpygF9E0UhQeYJBqFpl-F3-hPQsj/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/17bYxcpygF9E0UhQeYJBqFpl-F3-hPQsj/view?usp=sharing"
                             download="Varun Sunil Bajaj - Object Based Game Design.pdf" target="_blank">Rule Sheet</a>
                     </div>
                 </div>
@@ -346,9 +346,9 @@
                         <p>Learning an engine over a weekend - Godot Engine!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1A58uxZU7ptumIZndt5_dLJ__Fpd6LTWW/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1A58uxZU7ptumIZndt5_dLJ__Fpd6LTWW/view?usp=sharing"
                             download="Godot_GameFiles_VarunBajaj.rar" target="_blank">Download</a>
-                        <a onclick="showhide_video('godotvideodiv', 'godotvideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('godotvideodiv', 'godotvideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="godotvideodiv" style="display: none;">
                         <iframe id="godotvideoid"
@@ -369,7 +369,7 @@
                         <p>Designing a rule sheet for a sports game, from scratch!</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1f-x0ErspAmtIwns7HEuEW6Bdb5MjP4zL/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1f-x0ErspAmtIwns7HEuEW6Bdb5MjP4zL/view?usp=sharing"
                             download="SportsGameRuleSheet_VarunBajaj.pdf" target="_blank">Download</a>
                     </div>
                 </div>
@@ -386,9 +386,9 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1To0hCO4H7jHEv4odhTFPLWIUSqYvmbB4/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1To0hCO4H7jHEv4odhTFPLWIUSqYvmbB4/view?usp=sharing"
                             download="ThereWillBeBlood_VarunBajaj.pdf" target="_blank">Download Rule Sheet</a>
-                        <a href="images/gameplay_prototyping/There Will Be Blood Game Board - Varun Sunil Bajaj.jpg"
+                        <a class="waves-effect waves-light btn" href="images/gameplay_prototyping/There Will Be Blood Game Board - Varun Sunil Bajaj.jpg"
                             download="ThereWillBeBlood_GameBoard.jpg" target="_blank">Download Game Board</a>
                     </div>
                 </div>
@@ -406,9 +406,9 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1zQuHCevmgUFRf5Zy0CVbn0TNMlopVZla/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1zQuHCevmgUFRf5Zy0CVbn0TNMlopVZla/view?usp=sharing"
                             download="ProjectBoost_GameFiles_VarunBajaj.zip" target="_blank">Download</a>
-                        <a onclick="showhide_video('boostvideodiv', 'boostvideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('boostvideodiv', 'boostvideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="boostvideodiv" style="display: none;">
                         <iframe id="boostvideoid"
@@ -431,9 +431,9 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1CTguywWzb0nEAbXhDiLVFwCrEsdms2xZ/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1CTguywWzb0nEAbXhDiLVFwCrEsdms2xZ/view?usp=sharing"
                             download="TerminalHacker_GameFiles_VarunBajaj.zip" target="_blank">Download</a>
-                        <a onclick="showhide_video('terminalvideodiv', 'terminalvideoid');">Watch Gameplay</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('terminalvideodiv', 'terminalvideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="terminalvideodiv" style="display: none;">
                         <iframe id="terminalvideoid"
