--- a/leveldesign.html
+++ b/leveldesign.html
@@ -106,15 +106,15 @@
             <p>Designing a race using the GTA 5 level editor.</p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/16V_9S-T0rY9TfR6voyRcjoqfZm9nvaHu/view?usp=sharing"
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/16V_9S-T0rY9TfR6voyRcjoqfZm9nvaHu/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf"
               target="_blank">Download
               Level
               Layout</a>
-            <a onclick="showhide_video('gta1videodiv', 'gta1videoid');">Initial Level</a>
-            <a onclick="showhide_video('gta2videodiv', 'gta2videoid');">Iteration 1</a>
-            <a onclick="showhide_video('gta3videodiv', 'gta3videoid');">Iteration 2</a>
-            <a onclick="showhide_video('gta4videodiv', 'gta4videoid');">Iteration 3</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta1videodiv', 'gta1videoid');">Initial Level</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta2videodiv', 'gta2videoid');">Iteration 1</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta3videodiv', 'gta3videoid');">Iteration 2</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta4videodiv', 'gta4videoid');">Iteration 3</a>
           </div>
           <div class="video-container" id="gta1videodiv" style="display: none;">
             <iframe id="gta1videoid"
@@ -148,9 +148,9 @@
             </p>
           </div>
           <div class="card-action">
-            <a onclick="showhide_video('golfvideodiv', 'golfvideoid');">Watch Gameplay</a>
-            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2333713135" target="_blank">Steam
-              Workshop Page</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('golfvideodiv', 'golfvideoid');">Watch Gameplay</a>
+            <a class="waves-effect waves-light btn" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2333713135" target="_blank">Steam
+              Workshop</a>
           </div>
           <div class="video-container" id="golfvideodiv" style="display: none;">
             <iframe id="golfvideoid"
@@ -171,11 +171,11 @@
             </p>
           </div>
           <div class="card-action">
-            <a onclick="showhide_video('portalvideodiv', 'portalvideoid');">Watch Gameplay</a>
-            <a href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
+            <a class="waves-effect waves-light btn" onclick="showhide_video('portalvideodiv', 'portalvideoid');">Watch Gameplay</a>
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
               download="Varun Sunil Bajaj - Portal 2 Level Design Document.pdf" target="_blank">Download Document</a>
-            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1667976257" target="_blank">Steam
-              Workshop Page</a>
+            <a class="waves-effect waves-light btn" href="https://steamcommunity.com/sharedfiles/filedetails/?id=1667976257" target="_blank">Steam
+              Workshop</a>
           </div>
           <div class="video-container" id="portalvideodiv" style="display: none;">
             <iframe id="portalvideoid"
@@ -199,7 +199,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://link.medium.com/OxJha3zDvpb" target="_blank">Read on Medium</a>
+            <a class="waves-effect waves-light btn" href="https://link.medium.com/OxJha3zDvpb" target="_blank">Read on Medium</a>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a onclick="showhide_video('fcvideodiv', 'fcvideoid');">Watch Gameplay</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('fcvideodiv', 'fcvideoid');">Watch Gameplay</a>
           </div>
           <div class="video-container" id="fcvideodiv" style="display: none;">
             <iframe id="fcvideoid"
@@ -239,12 +239,12 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1ZoAMlGyu3qnHs-1fbe7Jhu8qX77A7CS1/view?usp=sharing"
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1ZoAMlGyu3qnHs-1fbe7Jhu8qX77A7CS1/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf" target="_blank">Download
               Level
               Layout</a>
-            <a onclick="showhide_video('fps1videodiv', 'fps1videoid');">Iteration 1</a>
-            <a onclick="showhide_video('fps2videodiv', 'fps2videoid');">Iteration 2</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('fps1videodiv', 'fps1videoid');">Iteration 1</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('fps2videodiv', 'fps2videoid');">Iteration 2</a>
           </div>
           <div class="video-container" id="fps1videodiv" style="display: none;">
             <iframe id="fps1videoid"
@@ -269,7 +269,7 @@
             <p>Analysing a level from Playdead's INSIDE.</p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1nSrDGMwnrPdKLS2-cU4nC0wT1aQpc17S/view?usp=sharing"
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1nSrDGMwnrPdKLS2-cU4nC0wT1aQpc17S/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx" target="_blank">Download</a>
           </div>
         </div>
@@ -285,7 +285,7 @@
             <p>Analysing a level from Respawn's Titanfall 2.</p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1pa-D0HbWXmTUMsOa00OLJELx_51WV5wU/view?usp=sharing"
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1pa-D0HbWXmTUMsOa00OLJELx_51WV5wU/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
               target="_blank">Download</a>
           </div>
@@ -302,7 +302,7 @@
             <p>A seminar on how Level Design can be used to tell a story.</p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1THe3VrjCdQfBjcqTZNCuaE4UBRGsHYkn/view?usp=sharing"
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1THe3VrjCdQfBjcqTZNCuaE4UBRGsHYkn/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
               target="_blank">Download</a>
           </div>
@@ -323,7 +323,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="https://drive.google.com/file/d/1IuqwKa2ut4_H81LDEoUDN4xFixhrAtd5/view?usp=sharing"
+            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1IuqwKa2ut4_H81LDEoUDN4xFixhrAtd5/view?usp=sharing"
               download="Varun Sunil Bajaj - Steep Level Design Document.pdf" target="_blank">Download</a>
           </div>
         </div>
