--- a/maya.html
+++ b/maya.html
@@ -103,7 +103,7 @@
                         <span class="card-title">Chess Set (Individual)</span>
                     </div>
                     <div class="card-action">
-                        <a href="https://sketchfab.com/models/ac827c4c8b924b2aa04209bcfd885f4a" target="_blank">View 3D
+                        <a class="waves-effect waves-light btn" href="https://sketchfab.com/models/ac827c4c8b924b2aa04209bcfd885f4a" target="_blank">View 3D
                             Model</a>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <span class="card-title">Axe (Individual)</span>
                     </div>
                     <div class="card-action">
-                        <a href="https://sketchfab.com/models/73e8deebe4ce47be92bc34eb6ece7f3f" target="_blank">View 3D
+                        <a class="waves-effect waves-light btn" href="https://sketchfab.com/models/73e8deebe4ce47be92bc34eb6ece7f3f" target="_blank">View 3D
                             Model</a>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                         <span class="card-title">Hammer (Individual)</span>
                     </div>
                     <div class="card-action">
-                        <a href="https://sketchfab.com/models/a9875759dd204c0d9fa16f1b329c5c3b" target="_blank">View 3D
+                        <a class="waves-effect waves-light btn" href="https://sketchfab.com/models/a9875759dd204c0d9fa16f1b329c5c3b" target="_blank">View 3D
                             Model</a>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                         <span class="card-title">Chair (Individual)</span>
                     </div>
                     <div class="card-action">
-                        <a href="https://sketchfab.com/models/4c9536a2d87e4c908be0ba66b72343d7" target="_blank">View 3D
+                        <a class="waves-effect waves-light btn" href="https://sketchfab.com/models/4c9536a2d87e4c908be0ba66b72343d7" target="_blank">View 3D
                             Model</a>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                         <span class="card-title">Candle Animation (Individual)</span>
                     </div>
                     <div class="card-action">
-                        <a onclick="showhide_video('candlevideodiv', 'candlevideoid');">View Animation</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('candlevideodiv', 'candlevideoid');">View Animation</a>
                     </div>
                     <div class="video-container" id="candlevideodiv" style="display: none;">
                         <iframe id="candlevideoid"
@@ -172,7 +172,7 @@
                         <span class="card-title">Mechanical Arm Animation (Individual)</span>
                     </div>
                     <div class="card-action">
-                        <a onclick="showhide_video('armvideodiv', 'armvideoid');">View Animation</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('armvideodiv', 'armvideoid');">View Animation</a>
                     </div>
                     <div class="video-container" id="armvideodiv" style="display: none;">
                         <iframe id="armvideoid"
