--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -106,12 +106,12 @@
                         <p>Creating an Escape Room game playable in Virtual Reality, using Unity 3D.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://drive.google.com/file/d/1egLwqvuBlQrz1Q2yid_dOb3lwLzldomG/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1egLwqvuBlQrz1Q2yid_dOb3lwLzldomG/view?usp=sharing"
                             download="Varun Sunil Bajaj - Escape Room VR.zip" target="_blank">Download Game</a>
-                        <a onclick="showhide_video('lvl1videodiv', 'lvl1videoid');">View Level 1 Pitch</a>
-                        <a onclick="showhide_video('lvl2videodiv', 'lvl2videoid');">View Level 2 Pitch</a>
-                        <a onclick="showhide_video('gamevideodiv', 'gamevideoid');">Walkthrough</a><br>
-                        <a href="https://drive.google.com/file/d/1vjOmxKLLtA21K7dQnXebfymWCfLTu_KQ/view?usp=sharing"
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('lvl1videodiv', 'lvl1videoid');">View Level 1 Pitch</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('lvl2videodiv', 'lvl2videoid');">View Level 2 Pitch</a>
+                        <a class="waves-effect waves-light btn" onclick="showhide_video('gamevideodiv', 'gamevideoid');">Walkthrough</a>
+                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1vjOmxKLLtA21K7dQnXebfymWCfLTu_KQ/view?usp=sharing"
                             download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf" target="_blank">Download
                             Game Design
                             Document</a>
