update lightlesss gdc description

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <p>
                                     Level Designer/Game Designer on a 3D puzzle game in
                                     which you must make use of light to manipulate enemies and the
-                                    environment.
+                                    environment. Showcased at GDC 2019.
                                 </p>
                             </div>
                             <div class="card-action">
