--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
                             </div>
                             <div class="card-content white-text">
                                 <p>
-                                    Project currently in development.
+                                    <ul>
+                                        <li>Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft Düsseldorf, and Ubisoft Reflections</li>
+                                        <li>Project currently in development</li>
+                                    </ul>
                                 </p>
                             </div>
                             <div class="card-action">
