update POP description

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                             <div class="card-content white-text">
                                 <p>
                                     <ul>
-                                        <li>Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft Düsseldorf, and Ubisoft Reflections</li>
-                                        <li>Project currently in development</li>
+                                        <li>- Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft Düsseldorf, and Ubisoft Reflections</li>
+                                        <li>- Project currently in development</li>
                                     </ul>
                                 </p>
                             </div>
@@ -132,6 +132,7 @@
                             </div>
                             <div class="card-content white-text">
                                 <p>
+                                    Worked as a Junior Technical Level Designer and was responsible for:
                                     <ul>
                                         <li>- Scripting and implementation of cinematics and cutscenes</li>
                                         <li>- Creating scripted events</li>
